syntax = "proto3";

package PuppeteerService;

message HelloDto {
  string name = 1;
}

message HelloResponseDto {
  string response = 1;
}

service HelloService {
  rpc sayHello (HelloDto) returns (HelloResponseDto) {}
}